--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- This is my header section, starts here -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-success">
+      <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand text-white" href="#">Traveller</a>
           <button
